# repo-fastapi

./: .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cpu.yml  ci-gpu.yml  ci-linux.yml  ci-macos.yml  ci-ubuntu.yml  ci-windows.yml  ci.yml  gpu-ci.yml
app/: main.py  runtime.py  toy_model.py
app/core/: config.py  errors.py  logging_.py
app/plugins/: base.py  loader.py
app/plugins/dummy/: README.md  manifest.json  plugin.py
app/plugins/neu_server/: PLUGIN_README_TEMPLATE.md  plugin.py
app/routes/: plugins.py
app/templates/: index.html
app/utils/: unify.py
docs/: LICENSES.md
scripts/: install_torch.py  test_api.py
tests/: conftest.py  test_.py  test_cuda.py  test_dummy.py  test_dummy_live.py  test_errors.py  test_logging.py  test_mps.py  test_run.py  test_slow_example.py
