# Minimal project-wide config (no packaging metadata)
# If you later publish to PyPI, add [project] and [build-system].

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# E (pycodestyle errors), F (pyflakes), I (isort via Ruff)
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
# Treat 'app' as first-party to sort imports correctly
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
# Black-like formatting without needing Black
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.flake8]
max-line-length = 100

[tool.pytest.ini_options]
addopts = "-q -r fEsxX --maxfail=1 --disable-warnings"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
